[gd_scene load_steps=7 format=2]

[ext_resource path="res://AlchemyStation.gd" type="Script" id=2]
[ext_resource path="res://Sign_Post_1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cauldron.tscn" type="PackedScene" id=4]
[ext_resource path="res://Models/AlchemyPlatform.obj" type="ArrayMesh" id=6]
[ext_resource path="res://StandardMaterial.tres" type="Material" id=7]

[sub_resource type="ConcavePolygonShape" id=4]
data = PoolVector3Array( 0, 0.25, -1, 0, -0.25, -2, 0.7818, 0.25, -0.6235, 0.7818, 0.25, -0.6235, 0, -0.25, -2, 1.5637, -0.25, -1.247, 0.7818, 0.25, -0.6235, 1.5637, -0.25, -1.247, 0.9749, 0.25, 0.2225, 0.9749, 0.25, 0.2225, 1.5637, -0.25, -1.247, 1.9499, -0.25, 0.445, 0.9749, 0.25, 0.2225, 1.9499, -0.25, 0.445, 0.4339, 0.25, 0.901, 0.4339, 0.25, 0.901, 1.9499, -0.25, 0.445, 0.8678, -0.25, 1.8019, 0.4339, 0.25, 0.901, 0.8678, -0.25, 1.8019, -0.4339, 0.25, 0.901, -0.4339, 0.25, 0.901, 0.8678, -0.25, 1.8019, -0.8678, -0.25, 1.8019, -0.4339, 0.25, 0.901, -0.8678, -0.25, 1.8019, -0.9749, 0.25, 0.2225, -0.9749, 0.25, 0.2225, -0.8678, -0.25, 1.8019, -1.9499, -0.25, 0.445, -0.2905, 0.25, -0.2317, 0, 0.25, -0.3716, -0.1744, 0.1278, -0.1391, -0.1744, 0.1278, -0.1391, 0, 0.25, -0.3716, 0, 0.1278, -0.2231, -0.9749, 0.25, 0.2225, -1.9499, -0.25, 0.445, -0.7818, 0.25, -0.6235, -0.7818, 0.25, -0.6235, -1.9499, -0.25, 0.445, -1.5637, -0.25, -1.247, -0.7818, 0.25, -0.6235, -1.5637, -0.25, -1.247, 0, 0.25, -1, 0, 0.25, -1, -1.5637, -0.25, -1.247, 0, -0.25, -2, 1.5637, -0.25, -1.247, 0, -0.25, -2, 1.9499, -0.25, 0.445, 1.9499, -0.25, 0.445, 0, -0.25, -2, 0.8678, -0.25, 1.8019, 0.8678, -0.25, 1.8019, 0, -0.25, -2, -0.8678, -0.25, 1.8019, -0.8678, -0.25, 1.8019, 0, -0.25, -2, -1.9499, -0.25, 0.445, -1.9499, -0.25, 0.445, 0, -0.25, -2, -1.5637, -0.25, -1.247, 0.3773, 0.25, -0.3009, 0, 0.25, -0.4826, 0.6951, 0.25, -0.5543, 0.6951, 0.25, -0.5543, 0, 0.25, -0.4826, 0, 0.25, -0.889, 0.4705, 0.25, 0.1074, 0.3773, 0.25, -0.3009, 0.8667, 0.25, 0.1978, 0.8667, 0.25, 0.1978, 0.3773, 0.25, -0.3009, 0.6951, 0.25, -0.5543, 0.2094, 0.25, 0.4348, 0.4705, 0.25, 0.1074, 0.3857, 0.25, 0.801, 0.3857, 0.25, 0.801, 0.4705, 0.25, 0.1074, 0.8667, 0.25, 0.1978, -0.2094, 0.25, 0.4348, 0.2094, 0.25, 0.4348, -0.3857, 0.25, 0.801, -0.3857, 0.25, 0.801, 0.2094, 0.25, 0.4348, 0.3857, 0.25, 0.801, -0.4705, 0.25, 0.1074, -0.2094, 0.25, 0.4348, -0.8667, 0.25, 0.1978, -0.8667, 0.25, 0.1978, -0.2094, 0.25, 0.4348, -0.3857, 0.25, 0.801, -0.3773, 0.25, -0.3009, -0.4705, 0.25, 0.1074, -0.6951, 0.25, -0.5543, -0.6951, 0.25, -0.5543, -0.4705, 0.25, 0.1074, -0.8667, 0.25, 0.1978, 0, 0.25, -0.4826, -0.3773, 0.25, -0.3009, 0, 0.25, -0.889, 0, 0.25, -0.889, -0.3773, 0.25, -0.3009, -0.6951, 0.25, -0.5543, 0, 0.1278, -0.2231, 0.1744, 0.1278, -0.1391, -0.1744, 0.1278, -0.1391, -0.1744, 0.1278, -0.1391, 0.1744, 0.1278, -0.1391, -0.2175, 0.1278, 0.0496, -0.2175, 0.1278, 0.0496, 0.1744, 0.1278, -0.1391, -0.0968, 0.1278, 0.201, -0.0968, 0.1278, 0.201, 0.1744, 0.1278, -0.1391, 0.0968, 0.1278, 0.201, 0.0968, 0.1278, 0.201, 0.1744, 0.1278, -0.1391, 0.2175, 0.1278, 0.0496, -0.1612, 0.25, 0.3348, -0.3623, 0.25, 0.0827, -0.0968, 0.1278, 0.201, -0.0968, 0.1278, 0.201, -0.3623, 0.25, 0.0827, -0.2175, 0.1278, 0.0496, 0.3623, 0.25, 0.0827, 0.1612, 0.25, 0.3348, 0.2175, 0.1278, 0.0496, 0.2175, 0.1278, 0.0496, 0.1612, 0.25, 0.3348, 0.0968, 0.1278, 0.201, 0, 0.25, -0.3716, 0.2905, 0.25, -0.2317, 0, 0.1278, -0.2231, 0, 0.1278, -0.2231, 0.2905, 0.25, -0.2317, 0.1744, 0.1278, -0.1391, -0.3623, 0.25, 0.0827, -0.2905, 0.25, -0.2317, -0.2175, 0.1278, 0.0496, -0.2175, 0.1278, 0.0496, -0.2905, 0.25, -0.2317, -0.1744, 0.1278, -0.1391, 0.1612, 0.25, 0.3348, -0.1612, 0.25, 0.3348, 0.0968, 0.1278, 0.201, 0.0968, 0.1278, 0.201, -0.1612, 0.25, 0.3348, -0.0968, 0.1278, 0.201, 0.2905, 0.25, -0.2317, 0.3623, 0.25, 0.0827, 0.1744, 0.1278, -0.1391, 0.1744, 0.1278, -0.1391, 0.3623, 0.25, 0.0827, 0.2175, 0.1278, 0.0496, 0.6951, 0.25, -0.5543, 0, 0.25, -0.889, 0.7818, 0.25, -0.6235, 0.7818, 0.25, -0.6235, 0, 0.25, -0.889, 0, 0.25, -1, 0.8667, 0.25, 0.1978, 0.6951, 0.25, -0.5543, 0.9749, 0.25, 0.2225, 0.9749, 0.25, 0.2225, 0.6951, 0.25, -0.5543, 0.7818, 0.25, -0.6235, 0.3857, 0.25, 0.801, 0.8667, 0.25, 0.1978, 0.4339, 0.25, 0.901, 0.4339, 0.25, 0.901, 0.8667, 0.25, 0.1978, 0.9749, 0.25, 0.2225, -0.3857, 0.25, 0.801, 0.3857, 0.25, 0.801, -0.4339, 0.25, 0.901, -0.4339, 0.25, 0.901, 0.3857, 0.25, 0.801, 0.4339, 0.25, 0.901, -0.8667, 0.25, 0.1978, -0.3857, 0.25, 0.801, -0.9749, 0.25, 0.2225, -0.9749, 0.25, 0.2225, -0.3857, 0.25, 0.801, -0.4339, 0.25, 0.901, -0.6951, 0.25, -0.5543, -0.8667, 0.25, 0.1978, -0.7818, 0.25, -0.6235, -0.7818, 0.25, -0.6235, -0.8667, 0.25, 0.1978, -0.9749, 0.25, 0.2225, 0, 0.25, -0.889, -0.6951, 0.25, -0.5543, 0, 0.25, -1, 0, 0.25, -1, -0.6951, 0.25, -0.5543, -0.7818, 0.25, -0.6235, 0, 0.25, -0.4826, 0.3773, 0.25, -0.3009, 0, 0.25, -0.3716, 0, 0.25, -0.3716, 0.3773, 0.25, -0.3009, 0.2905, 0.25, -0.2317, 0.3773, 0.25, -0.3009, 0.4705, 0.25, 0.1074, 0.2905, 0.25, -0.2317, 0.2905, 0.25, -0.2317, 0.4705, 0.25, 0.1074, 0.3623, 0.25, 0.0827, 0.4705, 0.25, 0.1074, 0.2094, 0.25, 0.4348, 0.3623, 0.25, 0.0827, 0.3623, 0.25, 0.0827, 0.2094, 0.25, 0.4348, 0.1612, 0.25, 0.3348, 0.2094, 0.25, 0.4348, -0.2094, 0.25, 0.4348, 0.1612, 0.25, 0.3348, 0.1612, 0.25, 0.3348, -0.2094, 0.25, 0.4348, -0.1612, 0.25, 0.3348, -0.2094, 0.25, 0.4348, -0.4705, 0.25, 0.1074, -0.1612, 0.25, 0.3348, -0.1612, 0.25, 0.3348, -0.4705, 0.25, 0.1074, -0.3623, 0.25, 0.0827, -0.4705, 0.25, 0.1074, -0.3773, 0.25, -0.3009, -0.3623, 0.25, 0.0827, -0.3623, 0.25, 0.0827, -0.3773, 0.25, -0.3009, -0.2905, 0.25, -0.2317, -0.3773, 0.25, -0.3009, 0, 0.25, -0.4826, -0.2905, 0.25, -0.2317, -0.2905, 0.25, -0.2317, 0, 0.25, -0.4826, 0, 0.25, -0.3716 )

[node name="AlchemyStation" type="Spatial"]
script = ExtResource( 2 )

[node name="Sign_2" parent="." instance=ExtResource( 3 )]

[node name="Cauldron" parent="." instance=ExtResource( 4 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, -0.672042, 0 )

[node name="AlchemyPlatform" type="MeshInstance" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
mesh = ExtResource( 6 )
material/0 = ExtResource( 7 )

[node name="StaticBody" type="StaticBody" parent="AlchemyPlatform"]

[node name="CollisionShape" type="CollisionShape" parent="AlchemyPlatform/StaticBody"]
shape = SubResource( 4 )

[connection signal="recipe_failure" from="Cauldron" to="." method="_on_Cauldron_recipe_failure"]
[connection signal="recipe_success" from="Cauldron" to="." method="_on_Cauldron_recipe_success"]
